--- a/ИНСТРУКЦИЯ_ЗАПУСК.md
+++ b/ИНСТРУКЦИЯ_ЗАПУСК.md
@@ -1,25 +1,70 @@
 # Инструкция по запуску папки build
 
-## Что нужно установить?
+## Что нужно для запуска
 
-**Node.js** (версия 12+) - скачать можно с официального сайта: https://nodejs.org/
+В папке `build` должны быть:
+
+- Все файлы приложения (HTML, CSS, JS)
+- Файл `launch.exe` (Windows) или `server` (Mac) - исполняемый файл сервера
+- Папка `data/` (для хранения данных, создается автоматически)
+
+## Первая установка (только один раз)
+
+1. **Установите Node.js** (версия 12+)
+
+   - Скачать можно с официального сайта: https://nodejs.org/
+   - После установки перезапустите компьютер
+
+2. **Установите зависимости проекта:**
+   ```bash
+   npm install
+   ```
+
+> **Примечание:** Node.js нужен только для сборки проекта. После сборки в папке `build` будет исполняемый файл сервера, который работает без установки зависимостей.
 
 ---
 
-## Вариант 1: С установкой serve
+## Сборка проекта
 
-1. Установите пакет `serve` (один раз):
+### Для Windows:
 
-   ```bash
-   npm install -g serve
-   ```
+```bash
+npm run build:win
+```
 
-2. Перейдите в папку проекта и запустите:
+Создаст файл `build/launch.exe`
 
-   ```bash
-   serve -s build
-   ```
+### Для Mac:
 
-3. Откройте адрес, который покажет команда (обычно `http://localhost:3000`)
+```bash
+npm run build:mac
+```
+
+Создаст файл `build/server`
+
+### Только фронтенд (без сервера):
+
+```bash
+npm run build
+```
 
 ---
+
+## Запуск приложения
+
+Просто запустите исполняемый файл:
+
+**Windows:** Дважды кликните на файл `build/launch.exe`
+
+**Mac:** Дважды кликните на файл `build/server` или запустите из терминала:
+
+```bash
+./build/server
+```
+
+Приложение автоматически:
+
+- Запустит сервер на порту 3001
+- **Windows:** Откроет браузер (Chrome или Edge) в полноэкранном kiosk режиме
+- **Mac:** Покажет URL в консоли (автоматическое открытие браузера работает только на Windows)
+- Создаст папку `data/` для хранения данных (если её нет)
